# ml-mnist

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  model_weights.cpu.pth  model_weights.mps.pth  pyproject.toml
src/mnist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mnist/model/: cnn_model.py  inference.py  simple_model.py  train.py
src/mnist/ui/: database.py  streamlit.py
