[project]
name = "mnist"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Phillipo",email = "andrewphillipo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)"
]

[tool.poetry]
packages = [{include = "mnist", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
