[project]
name = "mnist"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Phillipo",email = "andrewphillipo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "streamlit-drawable-canvas (>=0.9.3,<0.10.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
